更改BootStrap.js引用路径

--- a/power_station/Application/Home/View/Station/device_power_trend.html
+++ b/power_station/Application/Home/View/Station/device_power_trend.html
@@ -141,11 +141,11 @@
      }
     </script>
     <script type="text/javascript" src="__PUBLIC__/Static/Jquery/jquery.min.js"></script>
-    <script src="__PUBLIC__/script/station/bootstrap.min.js"></script>
+    <script src="__PUBLIC__/Static/bootstrap-3.3.0-dist/dist/css/bootstrap.min.js"></script>
     <script type="text/javascript" src="__PUBLIC__/Static/Jquery/jquery.min.js"></script>
     <script src="__PUBLIC__/script/station/jquery.datetimepicker.full.js"></script>
     <script type="text/javascript" src="__PUBLIC__/script/station/running_log.js"></script>
-    <script src="__PUBLIC__/script/station/bootstrap.min.js"></script>    
+    <script src="__PUBLIC__/Static/bootstrap-3.3.0-dist/dist/js/bootstrap.min.js"></script>    
     <script src="__PUBLIC__/script/station/sidebar.js"></script>
     <script src="__PUBLIC__/script/station/header_public.js"></script>
   </body>
