--- a/power_station/Application/Home/View/Station/layout_view.html
+++ b/power_station/Application/Home/View/Station/layout_view.html
@@ -498,7 +498,7 @@
     </div>
 
     <script type="text/javascript" src="__PUBLIC__/Static/Jquery/jquery.min.js"></script>
-    <script type="text/javascript" src="__PUBLIC__/script/station/bootstrap.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/Static/bootstrap-3.3.0-dist/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="__PUBLIC__/script/station/mmGrid.js"></script>
     <script type="text/javascript" src="__PUBLIC__/script/station/sidebar.js"></script>
     <script type="text/javascript" src="__PUBLIC__/script/station/header_public.js"></script>
