--- a/power_station/Application/Home/View/Station/power_station_monitor.html
+++ b/power_station/Application/Home/View/Station/power_station_monitor.html
@@ -218,8 +218,8 @@
     </div>
 
     <script type="text/javascript" src="__PUBLIC__/Static/Jquery/jquery.min.js"></script>
-    <script src="__PUBLIC__/script/station/echarts.js"></script>
-    <script src="__PUBLIC__/script/station/bootstrap.min.js"></script>
+    <script src="__PUBLIC__/Static/echarts/dist/echarts.js"></script>
+    <script src="__PUBLIC__/Static/bootstrap-3.3.0-dist/dist/js/bootstrap.min.js"></script>
     <script src="__PUBLIC__/script/station/sidebar.js"></script>
     <script src="__PUBLIC__/script/station/header_public.js"></script>
     <script src="__PUBLIC__/script/station/power_station_monitor.js"></script>
