--- a/power_station/Application/Home/View/Common/topbar.html
+++ b/power_station/Application/Home/View/Common/topbar.html
@@ -11,7 +11,7 @@
       </button>
     -->
       <a class="navbar-brand" href="#">
-        <p style="margin-top:-13px"><img alt="brand" src="http://localhost:8080/hahaha/thinkphp/Public/images/pc_header_logo.png" > &nbsp;新能云</p>
+        <p style="margin-top:-13px"><img alt="brand" src="__PUBLIC__/images/pc_header_logo.png" > &nbsp;新能云</p>
       </a>
     </div>
 
