--- a/power_station/Application/Home/View/Station/news_list.html
+++ b/power_station/Application/Home/View/Station/news_list.html
@@ -342,8 +342,8 @@
     </div>
 
     <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
-    <script src="__PUBLIC__/script/station/bootstrap.min.js"></script>
-    <script src="__PUBLIC__/script/station/sidebar-menu.js"></script>
+    <script src="__PUBLIC__/Static/bootstrap-3.3.0-dist/dist/js/bootstrap.min.js"></script>
+    <script src="__PUBLIC__/script/station/sidebar.js"></script>
     <script src="__PUBLIC__/script/station/header_public.js"></script>
     <script src="__PUBLIC__/script/station/mmGrid.js"></script>
     <script src="__PUBLIC__/script/station/listview_table.js"></script>
