更改左侧边栏链接

--- a/power_station/Application/Home/View/Common/left.html
+++ b/power_station/Application/Home/View/Common/left.html
@@ -1,7 +1,7 @@
       <div id="sidebar">
         <ul class="sidebar-menu">
           <li class="treeview">
-            <a class="treeview-item"href="#">
+            <a class="treeview-item" href="#">
               消息中心
               <i class="fa fa-caret-right active-right"></i>
             </a>
@@ -10,23 +10,23 @@
             </ul>
           </li>
           <li class="treeview">
-            <a class="treeview-item"href="#">
+            <a class="treeview-item" href="#">
               监控视图
               <i class="fa fa-caret-right active-right"></i>
             </a>
             <ul class="treeview-menu none"style="">
-              <li><a href="power_station_monitor"><i class="fa fa-dashboard fa-fw icon"></i>电站监控</a></li>
-              <li><a href="layout_view"><i class="fa fa-th-list fa-fw icon"></i>布局视图</a></li>
-              <li><a href="list_view"><i class="fa fa-reorder fa-fw icon"></i>列表视图</a></li>
-              <li><a href="trouble_alarm"><i class="fa fa-bell fa-fw icon"></i>故障报警</a></li>
-              <li><a href="running_log"><i class="fa fa-list-ol fa-fw icon"></i>运行日志</a></li>
-              <li><a href="history_data_query"><i class="fa fa-history fa-fw icon"></i>历史数据查询</a></li>
-              <li><a href="power_station_trend"><i class="fa fa-area-chart fa-fw icon"></i>电站功率趋势图</a></li>
-              <li><a href="device_power_trend"><i class="fa fa-line-chart fa-fw icon"></i>设备功率趋势图</a></li>
+              <li><a href="{:U('Station/power_station_monitor')}"><i class="fa fa-dashboard fa-fw icon"></i>电站监控</a></li>
+              <li><a href="{:U('Station/layout_view')}"><i class="fa fa-th-list fa-fw icon"></i>布局视图</a></li>
+              <li><a href="{:U('Station/list_view')}"><i class="fa fa-reorder fa-fw icon"></i>列表视图</a></li>
+              <li><a href="{:U('Station/trouble_alarm')}"><i class="fa fa-bell fa-fw icon"></i>故障报警</a></li>
+              <li><a href="{:U('Station/running_log')}"><i class="fa fa-list-ol fa-fw icon"></i>运行日志</a></li>
+              <li><a href="{:U('Station/history_data_query')}"><i class="fa fa-history fa-fw icon"></i>历史数据查询</a></li>
+              <li><a href="{:U('Station/power_station_trend')}"><i class="fa fa-area-chart fa-fw icon"></i>电站功率趋势图</a></li>
+              <li><a href="{:U('Station/device_power_trend')}"><i class="fa fa-line-chart fa-fw icon"></i>设备功率趋势图</a></li>
             </ul>
           </li>
           <li class="treeview">
-            <a class="treeview-item"href="#">
+            <a class="treeview-item" href="#">
               分析视图
               <i class="fa fa-caret-right active-right"></i>
             </a>
@@ -41,7 +41,7 @@
             </ul>
           </li>
           <li class="treeview">
-            <a class="treeview-item"href="#">
+            <a class="treeview-item" href="#">
               管理视图
               <i class="fa fa-caret-right active-right"></i>
             </a>
@@ -52,7 +52,7 @@
             </ul>
           </li>
           <li class="treeview">
-            <a class="treeview-item"href="#">
+            <a class="treeview-item" href="#">
               台帐视图
               <i class="fa fa-caret-right active-right"></i>
             </a>
