电站信息基本完成

--- a/power_station/Application/Home/View/Common/tophidden.html
+++ b/power_station/Application/Home/View/Common/tophidden.html
@@ -89,7 +89,7 @@
                             <span>全选</span>
                         </div>
                         <div class="pull-left"><a class="delete-all" >删除</a></div>
-                        <div class="pull-left"><span class="add-group" ><img src="http://localhost:8080/hahaha/thinkphp/Public/images/add-group.png"></span><span>添加电站</span></div>
+                        <div class="pull-left"><span class="add-group" ><img src="__PUBLIC__/images/add-group.png"></span><span>添加电站</span></div>
                     </div>
                 </div>
                 <div class="modal-body" >
