--- a/power_station/Application/Home/View/Station/device_power_trend.html
+++ b/power_station/Application/Home/View/Station/device_power_trend.html
@@ -81,7 +81,7 @@
     <div class="right_d">
     	<!-- 布局视图的标题 -->
     	<div class="lv_title1">
-            <span style="color: #1e3e50;font-size: 16px;margin: 0;padding-left:10px;line-height:50px;">苏州4#电站</span>
+            <span id="s_name" style="color: #1e3e50;font-size: 16px;margin: 0;padding-left:10px;line-height:50px;">苏州4#电站</span>
             <span style="cursor:pointer;color:#428bca;">[切换]</span>
         
         </div>
@@ -141,11 +141,9 @@
      }
     </script>
     <script type="text/javascript" src="__PUBLIC__/Static/Jquery/jquery.min.js"></script>
-    <script src="__PUBLIC__/Static/bootstrap-3.3.0-dist/dist/css/bootstrap.min.js"></script>
-    <script type="text/javascript" src="__PUBLIC__/Static/Jquery/jquery.min.js"></script>
-    <script src="__PUBLIC__/script/station/jquery.datetimepicker.full.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/script/station/jquery.datetimepicker.full.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/Static/bootstrap-3.3.0-dist/dist/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="__PUBLIC__/script/station/running_log.js"></script>
-    <script src="__PUBLIC__/Static/bootstrap-3.3.0-dist/dist/js/bootstrap.min.js"></script>    
     <script src="__PUBLIC__/script/station/sidebar.js"></script>
     <script src="__PUBLIC__/script/station/header_public.js"></script>
   </body>
