--- a/power_station/Application/Home/View/Station/history_data_query.html
+++ b/power_station/Application/Home/View/Station/history_data_query.html
@@ -81,7 +81,7 @@
     <div class="right_d">
     	<!-- 布局视图的标题 -->
     	<div class="lv_title1">
-            <span style="color: #1e3e50;font-size: 16px;margin: 0;padding-left:10px;line-height:50px;">苏州4#电站</span>
+            <span id="s_name" style="color: #1e3e50;font-size: 16px;margin: 0;padding-left:10px;line-height:50px;">苏州4#电站</span>
             <span style="cursor:pointer;color:#428bca;">[切换]</span>
         
         </div>
@@ -185,7 +185,7 @@
       //         "<td>"+"断流器跳闸"+"</td>";
       
       //   tmp+="<tr>";
-      }
+      
      
          document.getElementById("troublealarm_table1").innerHTML=tmp;
      }
