--- a/power_station/Application/Home/View/Station/layout_view.html
+++ b/power_station/Application/Home/View/Station/layout_view.html
@@ -20,7 +20,7 @@
       <div class="right_d">
       	<!-- 布局视图的标题 -->
       	<div class="lv_title1">
-              <span style="color: #1e3e50;font-size: 16px;margin: 0;padding-left:10px;line-height:50px;">苏州4#电站</span>
+              <span id="s_name" style="color: #1e3e50;font-size: 16px;margin: 0;padding-left:10px;line-height:50px;">苏州4#电站</span>
               <span style="cursor:pointer;color:#428bca;">[切换]</span>
               <ul style="margin-right: 50px;float: right;list-style: none;margin-bottom:0px;" name="selectDevStatusLegend">
                   <a class="lv_a1">
