--- a/power_station/Application/Home/View/Common/left.html
+++ b/power_station/Application/Home/View/Common/left.html
@@ -6,7 +6,7 @@
               <i class="fa fa-caret-right active-right"></i>
             </a>
             <ul class="treeview-menu none">
-              <li><a href="#"><i class="fa fa-calendar icon"></i>消息列表</a></li>
+              <li><a href="news_list"><i class="fa fa-calendar icon"></i>消息列表</a></li>
             </ul>
           </li>
           <li class="treeview">
