--- a/power_station/Application/Home/View/Station/news_list.html
+++ b/power_station/Application/Home/View/Station/news_list.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/Static/simple-line-icons-master/css/simple-line-icons.css" >
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/style/main.css">
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/Static/bootstrap-3.3.0-dist/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="__PUBLIC__/style/station/sidebar-menu.css">
-    <link rel="stylesheet" type="text/css" href="__PUBLIC__/style/station/menu.css">
+    <link rel="stylesheet" type="text/css" href="__PUBLIC__/style/common/sidebar.css">
+    <link rel="stylesheet" type="text/css" href="__PUBLIC__/style/common/menu.css">
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/style/station/power_station_monitor.css">
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/style/station/news_list.css">
     <link type="image/x-icon" rel="shortcut icon" href="__PUBLIC__/images/favicon.ico">
@@ -29,62 +29,7 @@
 
     <!-- 左侧菜单栏 -->
     <div id="left">
-      <aside class="main-sidebar">
-      <section class="sidebar">
-          <ul class="sidebar-menu">
-            <li class="treeview">
-              <a href="#">
-                <span>消息中心</span> <i class="fa fa-angle-right pull-right"></i>
-              </a>
-              <ul class="treeview-menu">
-                <li><a href="http://localhost:8080/hahaha/thinkphp/Home/Station/news_list"><span class="glyphicon glyphicon-calendar"></span> &nbsp;消息列表</a></li>
-              </ul>
-            </li>
-            <li class="treeview">
-              <a href="#">
-                <span>监控视图</span> <i class="fa fa-angle-right pull-right"></i>
-              </a>
-              <ul class="treeview-menu">
-                <li><a href="http://localhost:8080/hahaha/thinkphp/Home/Station/power_station_monitor"><span class="glyphicon glyphicon-eye-open"></span> &nbsp;电站监控</a></li>
-                <li><a href="http://localhost:8080/hahaha/thinkphp/Home/Station/layout_view"><span class="glyphicon glyphicon-th"></span> &nbsp;布局视图</a></li>
-                <li><a href="http://localhost:8080/hahaha/thinkphp/Home/Station/list_view"><span class="glyphicon glyphicon-align-justify"></span> &nbsp;列表视图</a></li>
-                <li><a href="http://localhost:8080/hahaha/thinkphp/Home/Station/trouble_alarm"><span class="glyphicon glyphicon-bell"></span> &nbsp;故障报警</a></li>
-                <li><a href="http://localhost:8080/hahaha/thinkphp/Home/Station/running_log"><span class="glyphicon glyphicon-list"></span> &nbsp;运行日志</a></li>
-                <li><a href="http://localhost:8080/hahaha/thinkphp/Home/Station/history_data_query"><span class="glyphicon glyphicon-repeat"></span> &nbsp;历史数据查询</a></li>
-                <li><a href="http://localhost:8080/hahaha/thinkphp/Home/Station/power_station_trend"><span class="glyphicon glyphicon-text-height"></span> &nbsp;电站功率曲线</a></li>
-                <li><a href="http://localhost:8080/hahaha/thinkphp/Home/Station/device_power_trend"><span class="glyphicon glyphicon-text-height"></span> &nbsp;设备功率曲线</a></li>
-              </ul>
-            </li>
-            <li class="treeview">
-              <a href="#">
-                <span>分析视图</span> <i class="fa fa-angle-right pull-right"></i>
-              </a>
-              <ul class="treeview-menu">
-                <li><a href="//127.0.0.1/dataweb/overview.php"><span class="glyphicon glyphicon-stats"></span> &nbsp;概览</a></li>
-              </ul>
-            </li>
-            <li class="treeview">
-              <a href="#">
-                <span>管理视图</span> <i class="fa fa-angle-right pull-right"></i>
-              </a>
-              <ul class="treeview-menu">
-                <li><a href="#"><span class="glyphicon glyphicon-usd"></span> &nbsp;电费结算</a></li>
-                <li><a href="#"><span class="glyphicon glyphicon-list-alt"></span> &nbsp;运维支出</a></li>
-                <li><a href="#"><span class="glyphicon glyphicon-wrench"></span> &nbsp;生产计划</a></li>
-              </ul>
-            </li>
-            <li class="treeview">
-              <a href="#">
-                <span>台帐视图</span> <i class="fa fa-angle-right pull-right"></i>
-              </a>
-              <ul class="treeview-menu">
-                <li><a href="#"><span class="glyphicon glyphicon-home"></span> &nbsp;电站台帐</a></li>
-                <li><a href="#"><span class="glyphicon glyphicon-cog"></span> &nbsp;运行配置</a></li>
-              </ul>
-            </li>
-          </ul>
-        </section>
-       </aside>
+      <include file="Common/left" />
     </div>
 
     <!-- 主要内容 -->
@@ -118,7 +63,7 @@
                             <div class="cell_inner">
                                 <div class="col-xs-12 news_content" style="">
                                     <div style="width:81px;float:left">
-                                        <span style="font-size:14px;color:black;">
+                                        <span id="s_name" style="font-size:14px;color:black;">
                                             <img src="__PUBLIC__/images/gear.png" class="icon_attr">
                                             苏州4号发电站
                                         </span>
@@ -341,15 +286,10 @@
         </div>
     </div>
 
-    <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/Static/Jquery/jquery.min.js"></script>
     <script src="__PUBLIC__/Static/bootstrap-3.3.0-dist/dist/js/bootstrap.min.js"></script>
     <script src="__PUBLIC__/script/station/sidebar.js"></script>
     <script src="__PUBLIC__/script/station/header_public.js"></script>
-    <script src="__PUBLIC__/script/station/mmGrid.js"></script>
-    <script src="__PUBLIC__/script/station/listview_table.js"></script>
-    <script>
-      $.sidebarMenu($('.sidebar-menu'))
-    </script>
     
   </body>
 </html>
