新增分析视图->发电量

--- a/power_station/Public/style/analysisView/analyData.css
+++ b/power_station/Public/style/analysisView/analyData.css
@@ -5,6 +5,10 @@ body {
     line-height: 1.42857;
 }
 
+.analysisView {
+    background-color: #F0F3F4;
+}
+
 .overview {
     background-color: #FFF;
 }
