--- a/power_station/Public/style/common/menu.css
+++ b/power_station/Public/style/common/menu.css
@@ -13,7 +13,7 @@
   left:0;
   bottom:0;
   width:200px;
-  background-color: #2b2d2f;
+  background-color: #1c2b36;
   border-top:1px solid rgba(42, 171, 210, 0.36);
   overflow-x:hidden;
   overflow-y:auto;
