--- a/power_station/Application/Home/View/Common/left.html
+++ b/power_station/Application/Home/View/Common/left.html
@@ -6,7 +6,7 @@
               <i class="fa fa-caret-right active-right"></i>
             </a>
             <ul class="treeview-menu none">
-              <li><a href="news_list"><i class="fa fa-calendar icon"></i>消息列表</a></li>
+              <li><a href="{:U('Station/news_list')}"><i class="fa fa-calendar icon"></i>消息列表</a></li>
             </ul>
           </li>
           <li class="treeview">
@@ -34,7 +34,7 @@
               <li><a href="{:U('AnalysisView/overview')}"><i class="fa fa-th-large fa-fw icon"></i>概览</a></li>
               <li><a href="{:U('AnalysisView/power_generation')}"><i class="fa fa-bar-chart-o fa-fw icon"></i>发电量</a></li>
               <li><a href="#"><i class="fa fa-tint fa-fw icon"></i>气象资讯</a></li>
-              <li><a href="#"><i class="fa fa-wrench fa-fw icon"></i>故障统计</a></li>
+              <li><a href="{:U('AnalysisView/trouble')}"><i class="fa fa-wrench fa-fw icon"></i>故障统计</a></li>
               <li><a href="#"><i class="fa fa-cog fa-fw icon"></i>设备性能</a></li>
               <li><a href="#"><i class="fa fa-ge fa-fw icon"></i>综合评估</a></li>
               <li><a href="#"><i class="fa fa-sort-numeric-asc fa-fw icon"></i>排名</a></li>
