--- a/power_station/Application/Home/View/AnalysisView/trouble.html
+++ b/power_station/Application/Home/View/AnalysisView/trouble.html
@@ -62,7 +62,7 @@
             <div id="timesChart" style="width: 100%; height: 300px"></div>
           </div>
           <div class="col-sm-12 panel">
-            <div class="pull-right" style="margin: 10px 0;>
+            <div class="pull-right" style="margin: 10px 0;">
               <span class="m-r-xs">
                 <i class="fa fa-circle m-r-xs" style="color:#4879df"></i>
                 逆变器
@@ -79,7 +79,7 @@
             <div id="faultTimesChart" style="width: 100%; height: 300px"></div>
           </div>
           <div class="col-sm-12 panel">
-            <div class="pull-right" style="margin: 10px 0;>
+            <div class="pull-right" style="margin: 10px 0;">
               <span class="m-r-xs">
                 <i class="fa fa-minus m-r-xs" style="color:#e06759"></i>
                 故障率
@@ -88,7 +88,7 @@
             <div id="faultRateChart" style="width: 100%; height: 300px"></div>
           </div>
           <div class="col-sm-12 panel">
-            <div class="pull-right" style="margin: 10px 0;>
+            <div class="pull-right" style="margin: 10px 0;">
               <span class="m-r-xs">
                 <i class="fa fa-minus m-r-xs" style="color:#f2cd94"></i>
                 MTTR
@@ -445,6 +445,7 @@
             timesChart.resize();
             faultTimesChart.resize();
             faultRateChart.resize();
+            mtChart.resize();
         }
       },200)
     </script>   
