新增管理视图

--- a/power_station/Application/Home/View/Index/system_index.html
+++ b/power_station/Application/Home/View/Index/system_index.html
@@ -15,9 +15,9 @@
 		<div class="header">
 			<div class="container" style="width:90%">
 				<div class="navbar-header">
-					<a href="http://localhost:8080/hahaha/thinkphp/Home/Index/system_index" class="navbar-brand">
+					<a href="system_index" class="navbar-brand">
 						<span style="float:left">
-							<img src="http://localhost:8080/hahaha/thinkphp/Public/images/top_logo.png">
+							<img src="__PUBLIC__/images/top_logo.png">
 						</span>
 						<span class="header_text">创维互联</span>
 					</a>
