--- a/power_station/Application/Home/View/Common/left.html
+++ b/power_station/Application/Home/View/Common/left.html
@@ -6,7 +6,7 @@
               <i class="fa fa-caret-right active-right"></i>
             </a>
             <ul class="treeview-menu none">
-              <li><a href="news_list"><i class="fa fa-calendar icon"></i>消息列表</a></li>
+              <li><a href="{:U('Station/news_list')}"><i class="fa fa-calendar icon"></i>消息列表</a></li>
             </ul>
           </li>
           <li class="treeview">
@@ -46,9 +46,9 @@
               <i class="fa fa-caret-right active-right"></i>
             </a>
             <ul class="treeview-menu none">
-              <li><a href="#"><i class="fa fa-yen fa-fw icon"></i>电费结算</a></li>
-              <li><a href="#"><i class="fa fa-credit-card fa-fw icon"></i>运维支出</a></li>
-              <li><a href="#"><i class="fa fa-cogs fa-fw icon"></i>生产计划</a></li>
+              <li><a href="{:U('Management/electricity_bill')}"><i class="fa fa-yen fa-fw icon"></i>电费结算</a></li>
+              <li><a href="{:U('Management/operational_expenses')}"><i class="fa fa-credit-card fa-fw icon"></i>运维支出</a></li>
+              <li><a href="{:U('Management/production_plan')}"><i class="fa fa-cogs fa-fw icon"></i>生产计划</a></li>
             </ul>
           </li>
           <li class="treeview">
