--- a/power_station/Public/style/system_index.css
+++ b/power_station/Public/style/system_index.css
@@ -8,7 +8,7 @@ html{
 body{
 	height: 100%;
 	width: 100%;
-	overflow: hidden;
+    overflow:hidden;
 	font-family: 'microsoft yahei',Arial,"Helvetica Neue",Helvetica,sans-serif;
     color: #707478;
     font-size: 13px;
@@ -37,12 +37,12 @@ a:hover{
     color: #fff;
 }
 .content{
-	overflow: hidden;
+
     position: relative;
     padding: 0!important;
     color: #fff;
     height:400px;
-    margin-top: 200px;
+    margin-top: 10%;
     width:80%;
     margin-left: auto;
     margin-right: auto;
