--- a/power_station/Application/Home/View/Station/power_station_monitor.html
+++ b/power_station/Application/Home/View/Station/power_station_monitor.html
@@ -15,7 +15,7 @@
        <include file="Common/left" />
     </div>
 
-    <!-- 主要内容 -->
+    <!-- 主要内容 123 -->
     <div id="right" >
     <div class="right_d">
     	<!-- 电站监控的标题 -->
@@ -27,7 +27,7 @@
     				</li>
     				<li >
     					<span id="s_name" style="font-size: 20px;color: #000000;">苏州4#电站</span>
-    					<span>[切换]</span>
+    					<span>[切换换]</span>
     				</li>
     				<li style="margin-left:20px;margin-top:6px">
     					<span>定位</span>
